--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
 * {
 	margin: 0;
 	padding: 0;
-	box-sizing: border-box;
 	font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
 		"Helvetica Neue", sans-serif;
 	-webkit-font-smoothing: antialiased;
@@ -16,6 +15,13 @@ code {
 	font-family: "Open Sans";
 	src: local("Open Sans"), url("./fonts/OpenSans-Regular.ttf") format("truetype");
 	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: "Open Sans";
+	src: local("Open Sans"), url("./fonts/OpenSans-SemiBold.ttf") format("truetype");
+	font-weight: 500;
 	font-style: normal;
 }
 
